chore: update triggers
